<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
    <ListPreference
        android:defaultValue="@string/settings_show_sections_default"
        android:entries="@array/settings_show_sections_labels"
        android:entryValues="@array/settings_show_sections_values"
        android:key="@string/settings_show_sections_key"
        android:title="@string/settings_show_sections_label" />

    <EditTextPreference
        android:inputType="number"
        android:defaultValue="@string/settings_page_size_default"
        android:title="@string/settings_page_size_label"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"/>


</PreferenceScreen>